# SomeEngine

./: .gitignore  CMakeLists.txt  README.md  compile.sh  imgui.ini  run.sh
headers/: mesh.h  model.h  shader.h
shaders/: fragmentShader.glsl  light_cube_fs.glsl  light_cube_vs.glsl  vertexShader.glsl
sources/: main.cpp
src/: main.cpp
